assets/css/app.scss
.fw-regular {
    font-weight: 400 !important;
}
.fw-medium {
    font-weight: 500 !important;
}

.container-fluid.live-container {
    padding-right: 0;
    padding-left: 0;
}

.room-detail .description {
    margin-bottom: 0;
}

@import '../node_modules/bootstrap/scss/bootstrap';

$navbar-dark-profile-icon: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#{$navbar-dark-color}" class="bi bi-people-fill" viewBox="0 0 16 16"><path d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/><path fill-rule="evenodd" d="M5.216 14A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1h4.216z"/><path d="M4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z"/></svg>');

.navbar-profile-icon {
  @extend .navbar-toggler-icon;
  background-image: escape-svg($navbar-dark-profile-icon)!important;
}

.wrapper {
    display: flex;
    width: 100%;
    align-items: stretch;
}

.nav-sidebar.collapse {
    min-width: 85vw;

    @include media-breakpoint-up(md) {
        display: block;
        width: 25vw;
        min-width: unset;
    }
}

.nav-sidebar.collapsing {
    white-space: nowrap;
    transition: width 0.1s ease;
}

.nav-sidebar .room-list {
    @extend .list-unstyled;
}

.room-list-item{
    padding: .5rem 1rem;
    border-radius: .75rem;

    &.active {
        background-color: $dark;
    }

    .room-list-link, .room-list-link:link, .room-list-link:hover {
        color: inherit;
        text-decoration: inherit;
    }
}

.nav-sidebar.show+.sidebar-content {
    white-space: nowrap;
}

.sidebar-content {
    width: calc(100vw - 1rem);

    @include media-breakpoint-up(md) {
        width: calc(75vw - 1rem);
    }
}

.navbar-toggler.navbar-toggler-md {
    @include media-breakpoint-up(md) {
        display: none;
    }
}

.room-name-icon {
  color: $gray-500;
  font-size: $h3-font-size;
}

.description {
  font-style: italic;
}

.message-wrapper {
    overflow-y: scroll;
    display: flex;
    flex-direction: column-reverse;
    max-height: 80vh;
    max-height: calc(100vh - 40px - 2rem - (42px + 1rem) - (50px + 1rem))
}

.message {
  --gravatar-size: 45px;

  align-items: start;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  margin-bottom: 1.5rem;
  width: 100%;

  .message-avatar {
    display: flex;
    border-radius: 33%;
    flex-direction: column;
    height: var(--gravatar-size);
    margin-right: .5rem;
    width: var(--gravatar-size);
  }

  .message-body {
    white-space: pre-wrap;
  }

  .message-contents {
    display: flex;
    flex-direction: column;
    width: calc(100% - var(--gravatar-size) - 1rem);
  }

  .message-user {
    color: $green;
    font-weight: bold;
  }

  .message-timestamp {
    color: $gray-500;
  }
}

.message-form {
  display: flex;
  margin-top: 1rem;
  flex-direction: row;

  .message-input {
    flex-direction: column;
  }

  .message-submit {
    flex-direction: column;
    padding-top: .75rem;
    padding-bottom: .75rem;
  }
}

